2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Add capability for bootcard.c BSP Initialization
	Framework to ask the BSP where it has memory for the RTEMS Workspace
	and C Program Heap. These collectively are referred to as work area.
	If the BSP supports this, then it does not have to include code to
	split the available memory between the two areas. This reduces the
	amount of code in the BSP specific bspstart.c file. Additionally, the
	shared framework can initialize the C Library, call
	rtems_debug_enable(), and dirty the work area memory. Until most/all
	BSPs support this new capability, if the BSP supports this, it should
	call RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION from its configure.ac.
	When the transition is complete, this autoconf macro can be removed.

2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Rework to avoid .rel files.

2008-04-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Remove all references to console_reserve_resources and
	termios_reserve_resources.
	* console/consolereserveresources.c: Removed.

2008-03-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds: Add wildcard to gcc_except_table section so
	programs compiled with gcc 4.3.x can link.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h, startup/bspstart.c: Eliminate copies of the
	Configuration Table. Use the RTEMS provided accessor macros to obtain
	configuration fields.

2007-12-08	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am: merged shared/vme/vme_universe.c and
	shared/vme/vme_universe_dma.c into one file.

2007-12-08	Till Straumann <strauman@slac.stanford.edu>

	* vme/VMEConfig.h: added error status to
	BSP_VME_UNIVERSE_INSTALL_IRQ_MGR(err) macro.

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h, startup/bspstart.c: Move interrupt_stack_size field
	from CPU Table to Configuration Table. Eliminate CPU Table from all